--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -3,19 +3,17 @@ name: Docker CI/CD Pipeline
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your code
+      # 1️⃣ Checkout source code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Set up Docker Buildx (for advanced builds and caching)
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -26,7 +24,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Build and push Docker image
+      # 4️⃣ Build and push image to Docker Hub
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -36,10 +34,15 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:${{ github.sha }}
-          build-args: |
-            ENV=production
 
-      # 5️⃣ Verify Docker image (optional sanity check)
+      # 5️⃣ Verify pushed image
       - name: Verify Docker image
+        run: docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:latest echo "✅ Image built and pushed!"
+
+      # 6️⃣ Deploy to Render using Render API
+      - name: Deploy to Render
         run: |
-          docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPO_NAME }}:latest echo "✅ Docker image built and pushed successfully!"
+          curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+          -H "Accept: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          -d ''
